# python_molecular_editor

./: .coveragerc  .gitignore  .pylintrc  1.mol  1.xyz  ABOUT-PYTHON-3.14.md  CHECKLIST.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_PRINCIPLES.md  GUI-TEST-FAIL.txt  Linux-install-note  Linux-install-note.md  README.md  SECURITY.md  TEST-FAILES.txt  _config.yml  all_pass_check.txt  all_pytest_results.txt  bond_editor.py  check_hang.txt  col_300.txt  col_err.txt  col_err_details.txt  col_err_end.txt  col_err_v2_end.txt  col_errors_final.txt  col_final_err.txt  col_line_315.txt  col_only_err.txt  col_range_56.txt  col_traceback.txt  col_v2_clean.txt  col_v2_err.txt  col_v2_err_detail.txt  col_v2_exact_err.txt  col_v2_final_search.txt  col_v2_mid.txt  (+77 more)
moleditpy/: README.md  pyproject.toml
moleditpy/src/moleditpy/: __init__.py  __main__.py  main.py
moleditpy/src/moleditpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
moleditpy/src/moleditpy/core/: __init__.py  app_state.py  compute_engine.py  mol_geometry.py  molecular_data.py  molecular_parsers.py  project_io.py  string_importers.py
moleditpy/src/moleditpy/modules/: __init__.py  about_dialog.py  align_plane_dialog.py  alignment_dialog.py  analysis_window.py  angle_dialog.py  atom_item.py  bond_editor_dialog.py  bond_item.py  bond_length_dialog.py  calculation_worker.py  color_settings_dialog.py  constants.py  constrained_optimization_dialog.py  custom_interactor_style.py  custom_qt_interactor.py  dialog3_d_picking_mixin.py  dialog_3d_picking_mixin.py  dihedral_dialog.py  main_window.py  mirror_dialog.py  (+32 more)
(+457 files in other folders)
